# azimuth-caas-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .stestr.conf  CONTRIBUTING.md  Dockerfile  README.md  ara-0.10.0.tgz  ara-0.10.1-dev.0.feature-add-alerts.2.tgz  ara-0.10.1-dev.0.feature-add-alerts.4.tgz  ara-0.10.1-dev.0.feature-add-alerts.6.tgz  ara-0.10.1-dev.0.feature-add-alerts.7.tgz  ara-0.10.1-dev.0.feature-add-alerts.9.tgz  ara-0.10.1-dev.0.feature-add-patached-at.2.tgz  ara-0.10.1-dev.0.feature-add-patached-at.3.tgz  ara-0.10.1-dev.0.feature-add-patached-at.4.tgz  ara-0.10.1-dev.0.feature-add-patached-at.5.tgz  ara-0.10.1-dev.0.feature-add-patached-at.6.tgz  ara-0.10.1-dev.0.main.1.tgz  ara-0.11.0.tgz  ara-0.11.1-dev.0.fix-ara-allowed-hosts.3.tgz  ara-0.11.1-dev.0.main.1.tgz  ara-0.11.1.tgz  ara-0.11.2-dev.0.bugfix-bump-default-timeout.5.tgz  ara-0.11.2-dev.0.bugfix-metrics-permissions.5.tgz  ara-0.11.2-dev.0.feature-better-errors.10.tgz  ara-0.11.2-dev.0.feature-better-errors.7.tgz  ara-0.11.2-dev.0.feature-better-errors.8.tgz  ara-0.11.2-dev.0.feature-kopf-tuning.7.tgz  ara-0.11.2-dev.0.feature-kopf-tuning.8.tgz  ara-0.11.2-dev.0.main.1.tgz  ara-0.11.2-dev.0.main.3.tgz  ara-0.11.2-dev.0.main.4.tgz  ara-0.11.2-dev.0.sign-containers.3.tgz  ara-0.11.2-dev.0.sign-containers.5.tgz  ara-0.11.2-dev.0.sign-containers.6.tgz  ara-0.11.2-dev.0.test-catagory.6.tgz  ara-0.12.0.tgz  ara-0.12.1-dev.0.feature-pause-flag.2.tgz  ara-0.12.1-dev.0.main.1.tgz  (+1339 more)
.github/: dependabot.yml
azimuth-caas-operator/: operator.py
azimuth_caas_operator/: __main__.py  k8s.py  (+3 more)
(+93 files in other folders)
