[metadata]
name = azimuth-caas-operator
version = 0.1.0
description = Kubernetes operator for creating ansible based clusters
author = John Garbutt
author_email = johng@stackhpc.com
url = https://github.com/stackhpc/azimuth-caas-operator

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic[yaml]
    easykube
    jinja2
    kopf
    kube-custom-resource
    pydantic
    pyyaml
