[metadata]
name = azimuth_caas_operator
summary = Kubernetes operator for creating ansible based clusters
description-file =
    README.rst
author = John Garbutt
author-email = johng@stackhpc.com
url = https://github.com/stackhpc/azimuth-caas-operator
python-requires = >=3.9

[files]
packages =
    azimuth_caas_operator
