[metadata]
name = azimuth_caas_operator
summary = Kubernetes operator for creating ansible based clusters
description-file =
    README.md
author = John Garbutt
author-email = johng@stackhpc.com
url = https://github.com/azimuth-cloud/azimuth-caas-operator
python-requires = >=3.9

[files]
packages =
    azimuth_caas_operator

[codespell]
skip = *.po, *.js, *.css, *.html, *.svg, HACKING.py, *hacking *, *build*, *_static*, doc/dictionary.txt, *.pyc, *.inv, *.gz, *.jpg, *.png, *.vsd, *.graffle, *.json
count =
quiet - level = 4
